@@ -6,6 +6,9 @@
    -> maybe delete podcasts that are deleted locally but still on ipod
    -> ............... :)
  
+ * make libplayers more compliant with the fdo specification of .desktop files
+  http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-0.9.4.html
+ 
  * do more translations (you can contribute here, of course :)
  
  * viewing pod info such as pubdate/description
