@@ -38,15 +38,17 @@ class writeLocalDB( object):
     
     def __init__( self, filename, channel):
         self.ofile = codecs.open( filename, "w", 'iso-8859-1', 'replace')
-	self.ofile.write( '<?xml version="1.0" encoding="ISO-8859-1"?>'+"\n")
-	self.ofile.write( '<!-- '+_('local download database, generated by gPodder')+' -->'+"\n")
-	self.ofile.write( '<rss version="2.0">'+"\n")
-	self.ofile.write( '<channel>'+"\n")
-	self.ofile.write( '<pubDate>' + datetime.now().ctime() + '</pubDate>'+"\n")
+        self.ofile.write( '<?xml version="1.0" encoding="ISO-8859-1"?>'+"\n")
+        self.ofile.write( '<!-- '+_('local download database, generated by gPodder')+' -->'+"\n")
+        self.ofile.write( '<rss version="2.0">'+"\n")
+        self.ofile.write( '<channel>'+"\n")
+        self.ofile.write( '<pubDate>' + datetime.now().ctime() + '</pubDate>'+"\n")
         
-        self.writeTitle( channel.title)
-        self.writeDescription( channel.description)
-        self.writeLink( channel.link)
+        self.ofile.write( '<title>'+saxutils.escape(channel.title)+'</title>'+"\n")
+        self.ofile.write( '<description><![CDATA['+channel.description+']]></description>'+"\n")
+        self.ofile.write( '<link>'+channel.link+'</link>'+"\n")
+        self.ofile.write( '<language>'+channel.language+'</language>'+"\n")
+        self.ofile.write( '<webMaster>'+channel.webMaster+'</webMaster>'+"\n")
         self.writeMetadata( channel)
         
         for item in channel:
@@ -54,21 +56,15 @@ class writeLocalDB( object):
             
         self.close()
 
-    def writeTitle( self, title):
-	self.ofile.write( '<title>'+saxutils.escape(title)+'</title>'+"\n")
-
-    def writeDescription( self, description):
-	self.ofile.write( '<description><![CDATA['+description+']]></description>'+"\n")
-
-    def writeLink( self, link):
-	self.ofile.write( '<link>'+link+'</link>'+"\n")
-
     def writeMetadata( self, channel):
         self.ofile.write( '<gpodder:info')
         self.ofile.write( ' nosync="%s"' % (str(not channel.sync_to_devices).lower()))
         self.ofile.write( ' music="%s"' % (str(channel.is_music_channel).lower()))
         self.ofile.write( ' playlist="%s"' % (channel.device_playlist_name))
         self.ofile.write( '/>'+"\n")
+
+    def writeEpisodeMetadata( self, episode):
+        self.ofile.write( '<gpodder:info />'+"\n")
 
     def close( self):
         self.ofile.write( '</channel>'+"\n")
@@ -78,8 +74,12 @@ class writeLocalDB( object):
     def addItem( self, item):
         self.ofile.write( '<item>'+"\n")
         self.ofile.write( '<title>'+saxutils.escape(item.title)+'</title>'+"\n")
+        self.writeEpisodeMetadata( item)
         self.ofile.write( '<description><![CDATA['+item.description+']]></description>'+"\n")
         self.ofile.write( '<url>'+saxutils.escape(item.url)+'</url>'+"\n")
+        self.ofile.write( '<link>'+saxutils.escape(item.link)+'</link>'+"\n")
+        self.ofile.write( '<guid>'+saxutils.escape(item.link)+'</guid>'+"\n")
+        self.ofile.write( '<pubDate>'+saxutils.escape(item.pubDate)+'</pubDate>'+"\n")
         self.ofile.write( '</item>'+"\n")
 
 
