@@ -1,3 +1,7 @@
+Sat, 08 Apr 2006 16:39:08 +0200 <thp@perli.net>
+	* Save more details in localDB
+	* Show more details in podcast window
+
 Sat, 08 Apr 2006 14:39:28 +0200 <thp@perli.net>
 	* "debugging" variable set to False again
 	* [ Bug #7016 ] corrupt file length -- fixed
